--- a/code/snapshot.Rmd
+++ b/code/snapshot.Rmd
@@ -70,7 +70,7 @@ tmp <-
   observacao %>% 
   filter(!is.na(coord_x) | !is.na(coord_y)) %>% 
   st_as_sf(coords = c('coord_x', 'coord_y'), crs = 4674)
-png(glue::glue("../res/{Sys.Date()}-febr-observacao.png"), width = 480 * 3, height = 480 * 3, res = 72 * 3)
+png("../res/febr-observacao.png", width = 480 * 3, height = 480 * 3, res = 72 * 3)
 plot(
   tmp["pais_id"], cex = 0.5, colorkey = FALSE, col = "firebrick", axes = TRUE, 
   graticule = TRUE, main = glue::glue("{Sys.Date()}-febr-observacao"))
@@ -81,8 +81,7 @@ Salvar os dados no formato CSV.
 
 ```{r}
 write.table(
-  observacao, file = glue::glue("../data/{Sys.Date()}-febr-observacao.csv"), sep = ";", dec = ",", 
-  row.names = FALSE)
+  observacao, file = glue::glue("../data/febr-observacao.csv"), sep = ";", dec = ",", row.names = FALSE)
 ```
 
 ## Tabelas `camada`
@@ -206,7 +205,7 @@ camada <- dplyr::select(
 Verificar a distribuição empírica dos dados, procurando por insconsistências nos dados.
 
 ```{r}
-png(glue::glue("../res/{Sys.Date()}-febr-camada.png"), width = 480 * 3, height = 480 * 3, res = 72 * 3)
+png("../res/febr-camada.png", width = 480 * 3, height = 480 * 3, res = 72 * 3)
 camada %>% 
   rename(profund = profund_inf) %>%
   select(profund, carbono, argila, areia, silte, terrafina, dsi, ctc, ph, ce) %>% 
@@ -217,15 +216,12 @@ dev.off()
 Salvar os dados no formato CSV.
 
 ```{r}
-write.table(
-  camada, file = glue::glue("../data/{Sys.Date()}-febr-camada.csv"), sep = ";", dec = ",", row.names = FALSE)
+write.table(camada, file = glue::glue("../data/febr-camada.csv"), sep = ";", dec = ",", row.names = FALSE)
 ```
 
 ## Tabelas `observacao` + `camada`
 
 ```{r}
 febr <- merge(observacao, camada, by = c("dataset_id", "observacao_id"))
-write.table(
-  febr, file = glue::glue("../data/{Sys.Date()}-febr-superconjunto.csv"), sep = ";", dec = ",", 
-  row.names = FALSE)
+write.table(febr, file = "../data/febr-superconjunto.csv", sep = ";", dec = ",", row.names = FALSE)
 ```
